--- a/ProjetoAula/Login.xaml
+++ b/ProjetoAula/Login.xaml
@@ -1,15 +1,12 @@
-﻿<Window x:Class="ProjetoAula.Principal"
+﻿<Window x:Class="ProjetoAula.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjetoAula"
         mc:Ignorable="d"
-        Title="Principal" Height="450" Width="800">
+        Title="Login" Height="450" Width="800">
     <Grid>
         
-        <Button Name="btnConsultarCliente"
-                Click="btnConsultarCliente_Click" Content="Consultar Cliente" FontSize="18" HorizontalAlignment="Left" Margin="89,63,0,0" VerticalAlignment="Top" Height="64" Width="224"/>
-
     </Grid>
 </Window>
